# console_2dgame

./: CmakeLists.txt  README.md
src/: CMakeLists.txt  engine.cpp  engine.h  main.cpp  pch.h  resource.cpp  resource.h  sprite.cpp  sprite.h
src/math/: 2d_math.h
